--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -13,8 +13,8 @@ import RoadmapSection from "@/components/maintainer/RoadmapPanel";
 
 <V2Layout active={ItemName.ProjectName}>
   <Panel activeMenuItem="work" slot="left" />
-  <TasksSection slot="center" client:load />
-  <InfoPanel
+  <!-- <TasksSection slot="center" client:load /> -->
+  <!-- <InfoPanel
     slot="right"
     title="How to work with the tasks?"
     icon="info"
@@ -34,7 +34,7 @@ import RoadmapSection from "@/components/maintainer/RoadmapPanel";
       </li>
       <li>• The icons next to each task helps to identify it.</li>
     </ul>
-  </InfoPanel>
+  </InfoPanel> -->
   <IssuesNotice slot="left" />
   <IssuesSection slot="center" />
   <RoadmapSection slot="right" />
