--- a/src/layouts/PanelViewLayout.astro
+++ b/src/layouts/PanelViewLayout.astro
@@ -3,6 +3,7 @@ import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
 import Header from "@/components/utilitified_decorations/Header.astro";
 import Footer from "@/components/utilitified_decorations/Footer.astro";
+import ThreeColumnGrid from "@/components/grid/ThreeColumnGrid.astro";
 
 interface Props {
   subtitle?: string;
@@ -32,20 +33,11 @@ const { subtitle, hideLinks } = Astro.props;
     <section>
       <slot name="hero" />
     </section>
-    <main
-      class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8 grid grid-cols-1 lg:grid-cols-4"
-    >
-      <div class="col-span-1 space-y-4 mr-2">
-        <slot name="left" />
-      </div>
-
-      <div class="lg:col-span-2 space-y-4 mx-2">
-        <slot name="center" />
-      </div>
-      <div class="lg:col-span-1 space-y-8 py-8 pt-0 ml-2">
-        <slot name="right" />
-      </div>
-    </main>
+    <ThreeColumnGrid className="mx-auto py-8 px-4">
+      <slot name="left" slot="left" />
+      <slot name="center" slot="center" />
+      <slot name="right" slot="right" />
+    </ThreeColumnGrid>
     <Footer />
   </body>
 </html>
