--- a/src/pages/meta/influencer.astro
+++ b/src/pages/meta/influencer.astro
@@ -3,7 +3,7 @@ import V2Layout from "@/layouts/LandingLayout.astro";
 import HeroSection from "@/components/grid/HeroSection.astro";
 import LeftImageRightPanels from "@/components/grid/LeftImageRightPanelsSection.astro";
 import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
-import { SectionBgType, type SectionProps } from "@/types/eventTypes";
+import { BgType, type SectionProps } from "@/types/eventTypes";
 import Section from "@/components/grid/Section.astro";
 import HorizontalPanels from "@/components/grid/HorizontalPanelsSection.astro";
 import EnergyIcon2 from "@/components/icon/EnergyIcon2";
@@ -69,7 +69,7 @@ const solutionSection: SectionProps = {
   title: "The CascadeFund Solution",
   bg: {
     overlay: "circles",
-    sectionBgType: SectionBgType.normalSection,
+    sectionBgType: BgType.normalSection,
   },
 };
 
@@ -108,7 +108,7 @@ const uniqueFeature: SectionProps = {
   title: "It's a public network",
   bg: {
     overlay: "rectangles",
-    sectionBgType: SectionBgType.heroSection,
+    sectionBgType: BgType.heroSection,
   },
 };
 
@@ -218,7 +218,7 @@ const projectStats = [
     cols={2}
     bottomPanel={bottomStep}
     panels={steps}
-    bg={{ sectionBgType: SectionBgType.infoSection }}
+    bg={{ sectionBgType: BgType.infoSection }}
     title="How CascadeFund Works?"
   />
   <Section
@@ -235,7 +235,7 @@ const projectStats = [
   <HorizontalPanels
     cols={3}
     panels={benefits}
-    bg={{ sectionBgType: SectionBgType.infoSection }}
+    bg={{ sectionBgType: BgType.infoSection }}
     title="Why Talk to Devs Through CascadeFund?"
   />
 
@@ -254,7 +254,7 @@ const projectStats = [
     ]}
     icon={await DevIcon({})}
     title="Start using CascadeFund"
-    bg={{ sectionBgType: SectionBgType.normalSection, overlay: "rectangles" }}
+    bg={{ sectionBgType: BgType.normalSection, overlay: "rectangles" }}
   >
     <!-- <p class="text-xl text-gray-400 mb-8 max-w-3xl mx-auto">Join CascadeFund today and start your journey as a valued open source contributor.</p> -->
     <div class="flex items-start space-x-4 text-left max-w-2xl mx-auto">
