--- a/src/pages/meta/work.astro
+++ b/src/pages/meta/work.astro
@@ -7,7 +7,7 @@ import HorizontalPanels from "@/components/grid/HorizontalPanelsSection.astro";
 import ThreeColumnGrid from "@/components/grid/ThreeColumnGrid.astro";
 import RowGrid from "@/components/grid/RowGrid";
 import UserIcon from "@/components/icon/UserIcon";
-import { SectionBgType } from "@/types/eventTypes";
+import { BgType } from "@/types/eventTypes";
 import { type RoleCardProps as RolePanelProps } from "@/components/RoleCard";
 import type { NumeratedInfoProps } from "@/components/utilitified_decorations/NumeratedInfoPanel";
 import Section from "@/components/grid/Section.astro";
@@ -20,7 +20,7 @@ const heroSection = {
   title: "How CascadeFund Works",
   actions: [{ variant: "green", children: "Getting Started", href: "/login/" }],
   bg: {
-    sectionBgType: SectionBgType.purpleToTealViaBlue,
+    sectionBgType: BgType.purpleToTealViaBlue,
   },
 };
 
@@ -221,13 +221,13 @@ const scenarios: Scenario[] = [
   <HorizontalPanels
     cols={3}
     panels={castMembers}
-    bg={{ sectionBgType: SectionBgType.infoSection }}
+    bg={{ sectionBgType: BgType.infoSection }}
     title="Meet the Cast"
   />
 
   <Section
     title="The Story in 10 Steps"
-    bg={{ sectionBgType: SectionBgType.infoSection, overlay: "rectangles" }}
+    bg={{ sectionBgType: BgType.infoSection, overlay: "rectangles" }}
   >
     <ThreeColumnGrid centerPercents={"3/4"}>
       <RowGrid slot="center" cols={2}>
@@ -246,9 +246,7 @@ const scenarios: Scenario[] = [
     </ThreeColumnGrid>
   </Section>
 
-  <Section
-    bg={{ sectionBgType: SectionBgType.infoSection, overlay: "rectangles" }}
-  >
+  <Section bg={{ sectionBgType: BgType.infoSection, overlay: "rectangles" }}>
     <ThreeColumnGrid centerPercents={"1/3"} centerClassName="flex">
       <Panel
         slot="left"
@@ -315,7 +313,7 @@ const scenarios: Scenario[] = [
   </Section>
   <Section
     title="How Ratings and Voting Work"
-    bg={{ sectionBgType: SectionBgType.infoSection, overlay: "circles" }}
+    bg={{ sectionBgType: BgType.infoSection, overlay: "circles" }}
   >
     <TwoColumnGrid firstPercents={50}>
       <div class="space-y-2" slot="two-column-left">
@@ -378,7 +376,7 @@ const scenarios: Scenario[] = [
 
   <Section
     title="See a website walkthrough"
-    bg={{ sectionBgType: SectionBgType.tealToRedViaLime, overlay: "circles" }}
+    bg={{ sectionBgType: BgType.tealToRedViaLime, overlay: "circles" }}
   >
     <ThreeColumnGrid centerPercents={50}>
       <div
@@ -411,7 +409,7 @@ const scenarios: Scenario[] = [
 
   <Section
     title="Ready to Join the CascadeFund Ecosystem?"
-    bg={{ sectionBgType: SectionBgType.redToPurpleViaLime, overlay: "circles" }}
+    bg={{ sectionBgType: BgType.redToPurpleViaLime, overlay: "circles" }}
     actions={[
       {
         variant: "green",
