--- a/src/pages/meta/quest.astro
+++ b/src/pages/meta/quest.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import V2Layout from "@/layouts/LandingLayout.astro";
 import HeroSection from '@/layouts/sections/HeroSection.astro'
 import QuestTable from '@/components/QuestTable'
