--- a/src/pages/meta/team.astro
+++ b/src/pages/meta/team.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import V2Layout from "@/layouts/LandingLayout.astro";
 import TeamPanel, {
   type Props as TeamPanelProps,
