--- a/src/pages/meta/work.astro
+++ b/src/pages/meta/work.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import V2Layout from "@/layouts/LandingLayout.astro";
 import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
 
