--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import V2Layout from "@/layouts/LandingLayout.astro";
 
 import HeroSection from "@/layouts/sections/HeroSection.astro";
