--- a/src/components/utilitified_decorations/Header.astro
+++ b/src/components/utilitified_decorations/Header.astro
@@ -14,10 +14,10 @@ const { subtitle, active, hideLinks } = Astro.props;
 ---
 
 <header
-  class={`h-14 -pt-2 bg-white shadow-sm border-b border-gray-200 px-${GridStyle.section.padding!.x} fixed top-0 right-0 left-0 z-10`}
+  class={`shadow-sm border-b border-gray-200 fixed top-0 right-0 left-0 z-10`}
 >
-  <div class="navbar bg-base-100 shadow-sm">
-    <div class="navbar-start">
+  <div class="navbar bg-base-100 shadow-sm items-start min-h-6">
+    <div class="navbar-start h-6">
       <div class="dropdown">
         <div tabindex={0} role="button" class="btn btn-ghost lg:hidden">
           <svg
@@ -45,16 +45,19 @@ const { subtitle, active, hideLinks } = Astro.props;
       </div>
       <CascadeFundLogo>{subtitle}</CascadeFundLogo>
     </div>
-    <div class="navbar-center hidden lg:flex lg:min-w-[50vw]">
+    <div class="navbar-center h-6 hidden lg:flex lg:min-w-[50vw]">
       <WorkNavbar
-        className="space-x-6 h-14"
+        className="space-x-6"
         active={active ? (active as ItemName) : undefined}
         hideLinks={hideLinks ? (hideLinks as ItemName[]) : undefined}
         ><slot />
       </WorkNavbar>
     </div>
-    <div class="navbar-end">
-      <LoginNavItem active={active === ActiveLoginNavItem} />
+    <div class="navbar-end flex h-6">
+      <LoginNavItem
+        className="py-1! px-2!"
+        active={active === ActiveLoginNavItem}
+      />
     </div>
   </div>
 </header>
