--- a/src/layouts/PanelViewLayout.astro
+++ b/src/layouts/PanelViewLayout.astro
@@ -10,9 +10,8 @@ interface Props {
   subtitle?: string;
   active?: string;
   hideLinks?: string[];
-  isDraggable?: boolean;
 }
-const { subtitle, hideLinks, isDraggable } = Astro.props;
+const { subtitle, hideLinks } = Astro.props;
 ---
 
 <!doctype html>
@@ -28,16 +27,16 @@ const { subtitle, hideLinks, isDraggable } = Astro.props;
     </style>
     <ClientRouter />
   </head>
-  <body class="min-h-screen bg-gray-200 pt-14">
+  <body class="min-h-screen bg-gray-200">
     <GridBackgrounded />
     <div class="z-1 relative">
       <Header subtitle={subtitle} hideLinks={hideLinks}>
         <slot name="header-navbar" />
       </Header>
-      <section>
+      <section class="mt-6">
         <slot name="hero" />
       </section>
-      <ThreeColumnGrid className="mx-auto py-8 space-x-4 px-4">
+      <ThreeColumnGrid className="mx-auto py-8 space-x-4 px-4 mt-6">
         <slot name="left" class="mr-4" slot="left" />
         <slot name="center" class="mx-4" slot="center" />
         <slot name="right" class="ml-4" slot="right" />
