--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -11,7 +11,7 @@ import RoadmapPanel from "@/components/maintainer/RoadmapPanel";
 import WorkPanel from "@/components/maintainer/WorkPanel";
 ---
 
-<V2Layout active={ItemName.ProjectName} isDraggable={true}>
+<V2Layout active={ItemName.ProjectName}>
   <Menu activeMenuItem="work" slot="left" />
   <!-- <TasksSection slot="center" client:load /> -->
   <!-- <InfoPanel
