--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -13,13 +13,13 @@ import { BgType } from "@/types/eventTypes";
 import NavigationIcon from "@/components/icon/NavigationIcon";
 import ChatIcon from "@/components/icon/ChatIcon";
 import PersonIcon from "@/components/icon/PersonIcon";
-import ProjectIcon from "@/components/icon/ProjectIcon";
 import RatingStarIcon2 from "@/components/icon/RatingStarIcon2";
 import Section from "@/layouts/sections/BaseSection.astro";
 import DevIcon from "@/components/icon/DevIcon";
 import Badge from "@/components/Badge";
 import HorizontalSection from "@/layouts/sections/HorizontalPanelsSection.astro";
 import Component from "@/components/utilitified_decorations/Panel";
+import { getIcon } from "@/components/icon";
 
 const contributorChalllengesSection = {
   prefix: "contributorChallenges",
@@ -81,7 +81,7 @@ const howItWorks = [
     description: "Ask maintainer about how the code work.",
   },
   {
-    icon: await ProjectIcon({}),
+    icon: getIcon("project"),
     title: "Fork that is discoverable",
     description:
       "and link it to the issue, to make your own project discoverable.",
