Icons now accept the fill color

--- a/src/components/project/ProjectInfoPanel.astro
+++ b/src/components/project/ProjectInfoPanel.astro
@@ -5,7 +5,6 @@ import Component from "@/components/utilitified_decorations/Panel";
 import NotificationBanner from "@/components/NotificationBanner";
 import Horizontally from "@/components/grid/RowGrid";
 import ForkIcon from "../icon/ForkIcon";
-import RatingStarIcon from "../icon/RatingStarIcon";
 import WarningIcon from "../icon/WarningIcon";
 import DescriptionIcon from "../icon/DescriptionIcon";
 import AdvantageIcon from "../icon/AdvantageIcon";
@@ -22,7 +21,7 @@ import { getIcon } from "../icon";
     >
       <div class="flex items-center space-x-2">
         <span class="text-sm text-gray-600">Rating:</span>
-        <RatingStarIcon />
+        {getIcon("star")}
         <span class="text-sm font-medium">1.0</span>
         <ForkIcon />
         <span class="text-sm">1</span>
