--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -3,13 +3,13 @@ import V2Layout from "@/layouts/PanelViewLayout.astro";
 import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 import Menu from "@/components/utilitified_decorations/MenuPanel";
 
-import TaskSection from "@/components/TaskPanel2";
+import TaskSection from "@/components/quest/QuestPanel";
 import NotificationBanner from "@/components/NotificationBanner";
 import Card from "@/components/utilitified_decorations/PagePanel";
 import CworkPanel from "@/components/maintainer/CworkPanel";
 ---
 
-<V2Layout activeLink={ItemName.ProjectName}>
+<V2Layout active={ItemName.ProjectName}>
   <Menu slot="left" activeMenuItem="cwork" />
   <NotificationBanner
     slot="center"
@@ -19,36 +19,7 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
     Got a bug, need a feature, have a question? Then, help to make the library
     better for you and for the world
   </NotificationBanner>
-  <TaskSection slot="center" />
-  <Card slot="right" title="How to work with the cascading tasks?">
-    <p>
-      Cascading Work aims to improve the depends quality in the quest based
-      system, via tasks:
-    </p>
-    <ul class="list-disc list-inside space-y-1 ml-2">
-      <li>
-        A task describes the quest mission. Quest missions are intended to
-        reduce overwhelming information, and do the work in the quickest
-        feedback way, which reduces the burnout.
-      </li>
-      <li>Each quest item to each task helps to identify it.</li>
-      <li>
-        Clicking on the task or pressing "Enter" will focus the browser into
-        that task.
-      </li>
-      <li>
-        Upon completing the task, you receive the rating points. The points
-        increase the rating of the project. Rating is the measurement of the
-        satisfaction and attraction you get from customers.
-      </li>
-    </ul>
-    <div class="mt-4">
-      <p class="text-cascade-blue font-medium">Learn how CascadeFund work.</p>
-      <p class="text-cascade-blue font-medium">
-        How does progress system work?
-      </p>
-    </div>
-  </Card>
+  <TaskSection slot="center" title="My Cascading Tasks" client:load />
 
   <CworkPanel slot="center" client:load />
   <Card slot="right" title="Dependencies Info">
