--- a/src/components/grid/ThreeColumnGrid.astro
+++ b/src/components/grid/ThreeColumnGrid.astro
@@ -17,7 +17,7 @@ let {
   rightClassName,
 } = Astro.props;
 if (className === undefined) {
-  className = "mx-auto ";
+  className = " mx-auto ";
 }
 if (centerPercents === undefined) {
   centerPercents = 50;
@@ -25,36 +25,36 @@ if (centerPercents === undefined) {
 
 const cols =
   centerPercents === "1/3"
-    ? 3 // center: 1/3 = Cols: 6 L:2, C:2, R:2
+    ? "lg:grid-cols-3" // center: 1/3 = Cols: 6 L:2, C:2, R:2
     : centerPercents === 50
-      ? 4 // center: 50% = Cols: 4, L:1, C:2, R:1
+      ? "lg:grid-cols-4" // center: 50% = Cols: 4, L:1, C:2, R:1
       : centerPercents === "3/4"
-        ? 8 // center: 3/4 = Cols: 8, L:1, C:6, R:1
-        : 10; // center: 4/5 = Cols: 10, L:1, C:8, R:1
+        ? "lg:grid-cols-8" // center: 3/4 = Cols: 8, L:1, C:6, R:1
+        : "lg:grid-cols-10"; // center: 4/5 = Cols: 10, L:1, C:8, R:1
 const centerSpan =
   centerPercents === "1/3"
-    ? 1
+    ? "lg:col-span-1"
     : centerPercents === 50
-      ? 2
+      ? "lg:col-span-2"
       : centerPercents === "3/4"
-        ? 6
-        : 8;
+        ? "lg:col-span-6"
+        : "lg:col-span-8";
 ---
 
-<main class={` grid grid-cols-1 lg:grid-cols-${cols} ${className}`}>
+<main class={`grid grid-cols-1 ${cols} ${className}`}>
   <div
-    class={`lg:col-span-1 space-y-${GridStyle.panel.gap!.y} mr-${GridStyle.section.padding!.x} ${leftClassName || ""}`}
+    class={`lg:col-span-1 ${GridStyle.panel.gap!.y} ${GridStyle.panel.margin!.right} ${leftClassName || ""}`}
   >
     <slot name="left" />
   </div>
 
   <div
-    class={`lg:col-span-${centerSpan} space-y-${GridStyle.panel.gap!.y} mx-${GridStyle.section.padding!.x} ${centerClassName || ""}`}
+    class={`${centerSpan} ${GridStyle.panel.gap!.y} ${GridStyle.panel.margin!.x} ${centerClassName || ""}`}
   >
     <slot name="center" />
   </div>
   <div
-    class={`lg:col-span-1 space-y-${GridStyle.panel.gap!.y} ml-${GridStyle.section.padding!.x} ${rightClassName || ""}`}
+    class={`lg:col-span-1 ${GridStyle.panel.gap!.y} ${GridStyle.panel.margin!.left} ${rightClassName || ""}`}
   >
     <slot name="right" />
   </div>
