--- a/src/components/utilitified_decorations/LandingHeader.astro
+++ b/src/components/utilitified_decorations/LandingHeader.astro
@@ -20,7 +20,7 @@ const { subtitle, active, hideLinks } = Astro.props;
   class={`h-14 -pt-2 bg-white shadow-sm border-b border-gray-200  fixed top-0 right-0 left-0 z-10`}
 >
   <div
-    class={`navbar bg-base-100 shadow-sm px-${GridStyle.section.padding!.x} h-14`}
+    class={`navbar bg-base-100 shadow-sm ${GridStyle.section.padding!.x} h-14`}
   >
     <div class="navbar-start">
       <div class="dropdown">
