--- a/src/components/utilitified_decorations/LandingNavbar.astro
+++ b/src/components/utilitified_decorations/LandingNavbar.astro
@@ -31,7 +31,7 @@ const isItemShown = (itemName: ItemName): boolean => {
 
 <nav
   tabindex={tabIndex}
-  class={`flex ${vertical ? " flex-col " : ` items-center justify-between w-full text-sm center h-14 px-${GridStyle.content.gap!.x}`} ${className || ""}`}
+  class={`flex ${vertical ? " flex-col " : ` items-center justify-between w-full text-sm center h-14 ${GridStyle.content.padding!.x}`} ${className || ""}`}
 >
   {
     isItemShown(ItemName.ContributorLanding) && (
