Improve the login page

--- a/src/layouts/sections/HorizontalPanelsSection.astro
+++ b/src/layouts/sections/HorizontalPanelsSection.astro
@@ -3,8 +3,8 @@ import WorkflowCard from "@/components/InfoPanel";
 import Horizontally from "@/components/grid/RowGrid";
 import type { SectionProps } from "@/types/eventTypes";
 import TitledInfoPanel from "@/components/utilitified_decorations/TitledInfoPanel";
-import type { RoleCardProps } from "@/components/RoleCard";
-import C from "@/components/RoleCard";
+import type { RoleCardProps } from "@/components/profile/RolePanel";
+import C from "@/components/profile/RolePanel";
 import Section from "./BaseSection.astro";
 
 type Props = SectionProps & { cols?: number };
