Interactive cards are bordered

--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -10,7 +10,7 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
 ---
 
 <V2Layout active={ItemName.ProjectName}>
-  <Menu slot="left" activeMenuItem="cwork" />
+  <Menu slot="left" activeMenuItem="cwork" client:load />
   <NotificationBanner
     slot="center"
     type="warning"
